kubernetes/k3s-prod-a/workloads/firefly/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly
  namespace: firefly
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: firefly
  template:
    metadata:
      labels:
        app: firefly
    spec:
      containers:
        - name: firefly
          image: docker.io/fireflyiii/core:version-6.2.5@sha256:b54629671aa2727eb82c94115ab6301015af59a054cc7149f5aefed44bf05f68
          startupProbe:
            httpGet:
              path: /health
              port: 8080
          ports:
            - containerPort: 8080
